# HighPrecPi

./: .gitignore  CMakeLists.txt  README.md  fixed_high_prec.cpp  fixed_high_prec.hpp  main-back.cpp  main.cpp  pi-2.md  pi.md  specified_divide.cpp
unittest/: CMakeLists.txt  test_big_int-deque.cpp  test_big_int-vector.cpp
